[gd_scene load_steps=14 format=2]

[ext_resource path="res://first 3D game/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://first 3D game/main3D.gd" type="Script" id=2]
[ext_resource path="res://first 3D game/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://first 3D game/fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://first 3D game/score_label.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[sub_resource type="CylinderMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="Curve3D" id=5]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -12.585, 0, -16.1309, 0, 0, 0, 0, 0, 0, 12.7458, 0, -16.2883, 0, 0, 0, 0, 0, 0, 12.9, 0, 15.7, 0, 0, 0, 0, 0, 0, -12.6, 0, 15.7, 0, 0, 0, 0, 0, 0, -12.585, 0, -16.1309 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 4 )

[node name="Main" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 3 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.794234, 0.566546, 0.219587, -0.287732, 0.0323811, 0.957164, 0.535167, -0.823393, 0.188731, 0, 0, 0 )
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19 )
projection = 1
fov = 65.3
size = 19.0

[node name="Cylinders" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.5345, 0, -16.1811 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.5345, 0, 15.7189 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.8655, 0, -16.2811 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.8655, 0, 15.6189 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="SpawnPath" type="Path" parent="."]
curve = SubResource( 5 )

[node name="SpawnLocation" type="PathFollow" parent="SpawnPath"]
transform = Transform( 0.990494, 0, -0.137555, 0, 1, 0, 0.137555, 0, 0.990494, -12.585, 0, -16.1309 )

[node name="MobSpawnTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 7 )

[node name="ScoreLabel" type="Label" parent="UserInterface"]
margin_left = 16.0
margin_top = 16.0
margin_right = 67.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.152941, 0.0980392, 0.0980392, 1 )
text = "Score: 0"
script = ExtResource( 5 )

[node name="Retry" type="ColorRect" parent="UserInterface"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.313726 )

[node name="RetryLabel" type="Label" parent="UserInterface/Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.0
margin_top = -19.0
margin_right = 157.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 8 )
text = "Press \"Enter\" to retry"

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_MobSpawnTimer_timeout"]
